--- a/index.html
+++ b/index.html
@@ -61,22 +61,34 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="Photo of Mark Guerrero" />
+            <img
+              src="./images/img1.jpg"
+              width="264"
+              alt="Photo of Mark Guerrero"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Photo of Tom Ford" />
+            <img src="./images/img2.jpg" width="264" alt="Photo of Tom Ford" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Photo of Camila Garcia" />
+            <img
+              src="./images/img3.jpg"
+              width="264"
+              alt="Photo of Camila Garcia"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="Photo of Daniel Wilson" />
+            <img
+              src="./images/img4.jpg"
+              width="264"
+              alt="Photo of Daniel Wilson"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
