--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -27,8 +27,7 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Benefits</h2>
+        <h2 hidden>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
