--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WebStudio</title>
   </head>
   <body>
+    <!-- #region header -->
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
@@ -22,11 +23,14 @@
         </ul>
       </address>
     </header>
+    <!-- #endregion header -->
     <main>
+      <!-- #region hero -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+      <!-- #endregion hero -->
         <h2 hidden>Benefits</h2>
         <ul>
           <li>
@@ -97,6 +101,7 @@
         </ul>
       </section>
     </main>
+    <!-- #region footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
@@ -104,5 +109,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- #endregion footer -->
   </body>
 </html>
