--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button type="button">Order Service</button>
       </section>
       <!-- #endregion hero -->
+      <!-- #region benefits-->
+      <section>
         <h2 hidden>Benefits</h2>
         <ul>
           <li>
@@ -63,12 +65,14 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion benefits -->
+      <!-- #region our team -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/img1.jpg"
+              src="./images/mark_guerrero.jpg"
               width="264"
               alt="Photo of Mark Guerrero"
             />
@@ -76,13 +80,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" width="264" alt="Photo of Tom Ford" />
+            <img
+              src="./images/tom_ford.jpg"
+              width="264"
+              alt="Photo of Tom Ford"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/img3.jpg"
+              src="./images/camila_garcia.jpg"
               width="264"
               alt="Photo of Camila Garcia"
             />
@@ -91,7 +99,7 @@
           </li>
           <li>
             <img
-              src="./images/img4.jpg"
+              src="./images/daniel_wilson.jpg"
               width="264"
               alt="Photo of Daniel Wilson"
             />
@@ -100,6 +108,7 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion our team -->
     </main>
     <!-- #region footer -->
     <footer>
