--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <ul>
           <li>
             <img
-              src="./images/mark_guerrero.jpg"
+              src="./images/our_team/mark_guerrero.jpg"
               width="264"
+              height="260"
               alt="Photo of Mark Guerrero"
             />
             <h3>Mark Guerrero</h3>
@@ -81,8 +82,9 @@
           </li>
           <li>
             <img
-              src="./images/tom_ford.jpg"
+              src="./images/our_team/tom_ford.jpg"
               width="264"
+              height="260"
               alt="Photo of Tom Ford"
             />
             <h3>Tom Ford</h3>
@@ -90,8 +92,9 @@
           </li>
           <li>
             <img
-              src="./images/camila_garcia.jpg"
+              src="./images/our_team/camila_garcia.jpg"
               width="264"
+              height="260"
               alt="Photo of Camila Garcia"
             />
             <h3>Camila Garcia</h3>
@@ -99,8 +102,9 @@
           </li>
           <li>
             <img
-              src="./images/daniel_wilson.jpg"
+              src="./images/our_team/daniel_wilson.jpg"
               width="264"
+              height="260"
               alt="Photo of Daniel Wilson"
             />
             <h3>Daniel Wilson</h3>
